# cliffg-example

./: .gitignore  README.md  setup.cfg
cliffg_example/: shell.py
cliffg_example/cli/: __init__.py  sub1.py  sub2.py
cliffg_example/utils/: command.py  rest.py
