[metadata]
name = cliffg-example
summary = A project to test cliff-generator
author = SerenaFeng
author-email = serena.feng.711@gmail.com
home-page = https://github.com/SerenaFeng/cliffg-example
license = Apache-2.0
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cliffg_example

data_files =
#    /etc/cliffg_example = etc/*

[entry_points]
console_scripts =
    cliffg-example = cliffg_example.shell:main

subs =
    sub2 create = cliffg_example.cli.sub2:Sub2Create
    sub2 update = cliffg_example.cli.sub2:Sub2Update
    sub2 show = cliffg_example.cli.sub2:Sub2Show
    
    sub1 create = cliffg_example.cli.sub1:Sub1Create
    sub1 show = cliffg_example.cli.sub1:Sub1Show
    sub1 list = cliffg_example.cli.sub1:Sub1List
    sub1 delete = cliffg_example.cli.sub1:Sub1Delete
    
    
[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0